--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nodeapp-deployment
@@ -23,7 +23,7 @@ spec:
         
 ---
 
-apiVersion: v1
+apiVersion: apps/v1
 kind: Service
 metadata:
   name: nodeapp-service
